...
            "state": "translated",
            "value": "JavaScriptCore"
          }
        }
      }
    },
    "Local Python": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Local Python"
          }
...
            "state": "translated",
            "value": "无输出"
          }
        }
      }
    },
    "Node.js": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Node.js"
          }
...
            "state": "translated",
            "value": "运行状况检查"
          }
        }
      }
    },
    "Import Probe": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Import Probe"
          }
...
            "state": "translated",
            "value": "此作用域中没有变量"
          }
        }
      }
    },
    "Node Packages": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Node Packages"
          }
...
            "state": "translated",
            "value": "包"
          }
        }
      }
    },
    "Package details": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Package details"
          }
...
            "state": "translated",
            "value": "Piston 远程 Python"
          }
        }
      }
    },
    "Prepare": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Prepare"
          }
...
            "state": "translated",
            "value": "PyPI 包"
          }
        }
      }
    },
    "Python Packages": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Python Packages"
          }
...
            "state": "translated",
            "value": "共享"
          }
        }
      }
    },
    "Shell Capabilities": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Shell Capabilities"
          }
...
            "state": "translated",
            "value": "不可用"
          }
        }
      }
    },
    "Uninstall": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Uninstall"
          }
...
